crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__pauses-and-events.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Pauses and events: (.) (..) (...) timed pauses; &=action events;"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "&*SPEAKER:word other-spoken-events"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: pause_token (all durations), event, event_marker, event_segment,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "other_spoken_event, nonword_with_optional_annotations"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "I",
              "cleaned_text": "I",
              "content": [
                {
                  "type": "text",
                  "content": "I"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "short"
              }
            },
            {
              "type": "word",
              "raw_text": "want",
              "cleaned_text": "want",
              "content": [
                {
                  "type": "text",
                  "content": "want"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "timed",
                "seconds": "3."
              }
            },
            {
              "type": "word",
              "raw_text": "a",
              "cleaned_text": "a",
              "content": [
                {
                  "type": "text",
                  "content": "a"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "cookie",
              "cleaned_text": "cookie",
              "content": [
                {
                  "type": "text",
                  "content": "cookie"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "medium"
              }
            },
            {
              "type": "word",
              "raw_text": "please",
              "cleaned_text": "please",
              "content": [
                {
                  "type": "text",
                  "content": "please"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "long"
              }
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "event",
              "event_type": "yawn"
            },
            {
              "type": "word",
              "raw_text": "who",
              "cleaned_text": "who",
              "content": [
                {
                  "type": "text",
                  "content": "who"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "are",
              "cleaned_text": "are",
              "content": [
                {
                  "type": "text",
                  "content": "are"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "you",
              "cleaned_text": "you",
              "content": [
                {
                  "type": "text",
                  "content": "you"
                }
              ]
            },
            {
              "type": "event",
              "event_type": "cough"
            }
          ],
          "terminator": {
            "type": "question"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "he",
              "cleaned_text": "he",
              "content": [
                {
                  "type": "text",
                  "content": "he"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "said",
              "cleaned_text": "said",
              "content": [
                {
                  "type": "text",
                  "content": "said"
                }
              ]
            },
            {
              "type": "other_spoken_event",
              "speaker": "MOT",
              "text": "yeah"
            },
            {
              "type": "word",
              "raw_text": "and",
              "cleaned_text": "and",
              "content": [
                {
                  "type": "text",
                  "content": "and"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "left",
              "cleaned_text": "left",
              "content": [
                {
                  "type": "text",
                  "content": "left"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "event",
              "event_type": "laughs"
            },
            {
              "type": "word",
              "raw_text": "that",
              "cleaned_text": "that",
              "content": [
                {
                  "type": "text",
                  "content": "that"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "is",
              "cleaned_text": "is",
              "content": [
                {
                  "type": "text",
                  "content": "is"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "funny",
              "cleaned_text": "funny",
              "content": [
                {
                  "type": "text",
                  "content": "funny"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "foo",
              "cleaned_text": "foo",
              "content": [
                {
                  "type": "text",
                  "content": "foo"
                }
              ]
            },
            {
              "type": "event",
              "event_type": "head:no"
            },
            {
              "type": "word",
              "raw_text": "bar",
              "cleaned_text": "bar",
              "content": [
                {
                  "type": "text",
                  "content": "bar"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "a",
              "cleaned_text": "a",
              "content": [
                {
                  "type": "text",
                  "content": "a"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "timed",
                "seconds": "2:3."
              }
            },
            {
              "type": "word",
              "raw_text": "b",
              "cleaned_text": "b",
              "content": [
                {
                  "type": "text",
                  "content": "b"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "timed",
                "seconds": "3.4"
              }
            },
            {
              "type": "word",
              "raw_text": "c",
              "cleaned_text": "c",
              "content": [
                {
                  "type": "text",
                  "content": "c"
                }
              ]
            },
            {
              "type": "pause",
              "duration": {
                "type": "timed",
                "seconds": "2:3.4"
              }
            },
            {
              "type": "word",
              "raw_text": "d",
              "cleaned_text": "d",
              "content": [
                {
                  "type": "text",
                  "content": "d"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": []
}
