crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__quotations.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Quoted speech with Unicode double-quote delimiters",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: quotation, double_quote, left_double_quote, right_double_quote",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "category": "nonword",
                    "cleaned_text": "foo",
                    "content": [
                      {
                        "content": "foo",
                        "type": "text"
                      }
                    ],
                    "raw_text": "&~foo",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "and",
                    "content": [
                      {
                        "content": "and",
                        "type": "text"
                      }
                    ],
                    "raw_text": "and",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "more",
                    "content": [
                      {
                        "content": "more",
                        "type": "text"
                      }
                    ],
                    "raw_text": "more",
                    "type": "word"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "she",
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "I",
                    "content": [
                      {
                        "content": "I",
                        "type": "text"
                      }
                    ],
                    "raw_text": "I",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "want",
                    "content": [
                      {
                        "content": "want",
                        "type": "text"
                      }
                    ],
                    "raw_text": "want",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "cookies",
                    "content": [
                      {
                        "content": "cookies",
                        "type": "text"
                      }
                    ],
                    "raw_text": "cookies",
                    "type": "word"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
